[package]
name = "baypaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0.61", features = ["preserve_order"] }
deadpool-redis = { version = "0.10.2", features = ["rt_tokio_1", "serde"] }
deadpool = { version = "0.9.2", features = ["rt_tokio_1", "serde"] }
tokio = { version = "1.17.0", features = ["macros", "io-util"] }
actix-web = "4.0.0-rc.1"
serenity = { git = "https://github.com/serenity-rs/serenity", branch = "next", default-features = false, features = ["client", "gateway", "rustls_backend", "model", "http", "cache"] }
log = "0.4.14"
env_logger = "0.9.0"
bristlefrost = { git = "https://github.com/Fates-List/bristlefrost" }